修改了README.md文件

--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
-	"appid": "wx4d6fa6df5a7a5d4c",
+	"appid": "wx091b40ac4747c47a",
 	"projectname": "wx-speech-recognition",
 	"debugOptions": {
 		"hidedInDevtools": []
